Testing additional java parameters.