@@ -62,6 +62,10 @@ public class MinecraftLauncher {
 
 		setMemory(arguments, rmax);
 
+		arguments.add("-XX:+UseConcMarkSweepGC");
+		arguments.add("-XX:+CMSIncrementalMode");
+		arguments.add("-XX:+AggressiveOpts");
+
 		arguments.add("-cp");
 		arguments.add(System.getProperty("java.class.path") + cpb.toString());
 
